Added function to count bonus sum p1

--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
 
                 <tr class="lightGrey">
                     <th class="darkGrey">Sum</th>
-                    <th><input id="player1_sum" type="text"></th>
-                    <th><input id="player2_sum" type="text"></th>
-                    <th><input id="player3_sum" type="text"></th>
-                    <th><input id="player4_sum" type="text"></th>
+                    <th id="player1_sum"></th>
+                    <th id="player2_sum"></th>
+                    <th id="player3_sum"></th>
+                    <th id="player4_sum"></th>
                 </tr>
 
                 <tr class="lightGrey">
                     <th class="darkGrey">Bonus</th>
-                    <th><input type="text"></th>
-                    <th><input type="text"></th>
-                    <th><input type="text"></th>
-                    <th><input type="text"></th>
+                    <th id="player1_bonus"></th>
+                    <th id="player2_bonus"></th>
+                    <th id="player3_bonus"></th>
+                    <th id="player4_bonus"></th>
                 </tr>
 
                 <tr>
