Sum updates automatically

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <th><input type="text"></th>
                 </tr>
 
-                <button id="calc">Räkna ut</button>
+                <!--<button id="calc">Räkna ut</button>-->
 
               <script src="script.js"></script>
     
