Cleaned up repo folders

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html   lang="en">
     <head>
-        <link href="style.css" rel="stylesheet">
+        <link href="resources/style.css" rel="stylesheet">
         <title>Yatzy Sida</title> 
     </head>
 
@@ -170,7 +170,7 @@
 
                 <!--<button id="calc">Räkna ut</button>-->
 
-              <script src="script.js"></script>
+              <script src="resources/script.js"></script>
     
             <tbody>
                
